--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-  <script src="bundle.js"> </script>
+  <head>
+    <script src="./bundle.js"></script>
+  </head>
   <body>
     <div id="component-index">
     </div>
